# DRFProject

./: .env.example  README.md  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py
quizzes/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py
users/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
